src/styles/main.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  @font-face {
    font-family: "VT323";
    src: url("/assets/fonts/VT323-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
    font-display: block;
  }

  @font-face {
    font-family: "Inter";
    src: url("/assets/fonts/Inter-Regular.ttf") format("truetype");
    font-weight: normal;
    font-style: normal;
    font-display: block;
  }
}

